css fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 #root {
   margin: 0 auto;
   text-align: center;
+  overflow: hidden;
+}
+
+html {
+  overflow: hidden;
+
 }
 
 .logo {
